--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
+
 :root {
 	--header-bg: #cc2b5e;
 	--text-color-white: #ffffff;
@@ -10,7 +12,7 @@
 html,
 body {
 	font-size: 100%;
-	font-family: Quicksand, sans-serif;
+	font-family: "Poppins", sans-serif;
 }
 
 *,
